--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -2,3 +2,17 @@
     display: flex;
     flex-direction: row;
 }
+
+a {
+    margin-left: 0;
+    width: 100%;
+    text-decoration: none!important;
+}
+
+a:link, a:visited {
+    color: #000000;
+}
+
+a:hover, a:active {
+color: #343B3F;
+}
