--- a/src/components/components.css
+++ b/src/components/components.css
@@ -1,5 +1,30 @@
+.header-wrapper h3 {
+    width: fit-content;
+    padding: 0.25em 0.75em;
+    border: 2px solid #000;
+    box-shadow: 5px 5px #000;
+}
+
+.header-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
 .groupBlock, .courseBlock {
     height: 100%;
+}
+
+.groupBlock, .courseBlock, .newGroupAdder {
+    border: 2px solid #000;
+    border-radius: 0px;
+    box-shadow: 2.5px 2.5px #000;
+}
+
+.groupBlock:active, .courseBlock:active, .newGroupAdder:active {
+    transform: translate(2.5px, 2.5px);
+    box-shadow: 0px 0px #FFF;
 }
 
 .newGroupAdder {
