--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -1,5 +1,25 @@
+* {
+    font-weight: 500!important;
+}
+
+.register-form-wrapper, .login-form-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.register-card, .login-card {
+    width: 50%;
+    border: 2px solid #000;
+    border-radius: 0;
+    box-shadow: 5px 5px #000;
+}
+
 .register-wrapper a, .login-wrapper a {
-    margin-left: 17%;
+    margin-left: -32%;
+    color: #000;
+    font-weight: 700;
 }
 
 .register-wrapper #passwordsMatch {
