--- a/src/components/components.css
+++ b/src/components/components.css
@@ -15,6 +15,10 @@
     float: right;
 }
 
+.logoutButton:hover {
+    background-color: #333C3F;
+}
+
 .groupBlock, .courseBlock {
     height: 100%;
 }
@@ -25,7 +29,7 @@
     box-shadow: 2.5px 2.5px #000;
 }
 
-.groupBlock:active, .courseBlock:active, .newGroupAdder:active {
+.groupBlock:hover, .courseBlock:hover, .newGroupAdder:hover {
     transform: translate(2.5px, 2.5px);
     box-shadow: 0px 0px #FFF;
 }
