--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -15,8 +15,26 @@ button {
     padding: 0.25em 0.75em;
 }
 
+button.secondary {
+    background-color: #6C757D;
+}
+
 button:hover {
     background-color: #000;
+}
+
+button.secondary:hover {
+    background-color: #5C6369;
+}
+
+button.close:hover {
+    background-color: #FFF;
+}
+
+.modal-content {
+    border-radius: 0px;
+    border: 2px solid #000;
+    box-shadow: 5px 5px #000;
 }
 
 .register-form-wrapper, .login-form-wrapper {
