everything has 1% margin-right now i guess

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -17,10 +17,21 @@
 
 .logoutButton-wrapper {
     float: right;
+    margin-right: 1%;
 }
 
 .logoutButton:hover {
     background-color: #000;
+}
+
+.newGroupAdder {
+    min-width: 15%;
+    width: 100%;
+    margin-right: 1%;
+}
+
+.groupBlockLink, .courseBlockLink {
+    margin-right: 1%;
 }
 
 .groupBlock, .courseBlock {
