--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -65,13 +65,19 @@ button.close:hover {
 .courses-wrapper, .groups-wrapper {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .courses-wrapper a, .groups-wrapper a {
-    max-width: 25%;
+    max-width: 24%;
     width: 100%;
     text-decoration: none!important;
 }
+
+.courses-wrapper:last-child, .groups-wrapper:last-child {
+    margin-right: 0;
+}
+
 .courses-wrapper a:link, .courses-wrapper a:visited, .groups-wrapper a:link, .groups-wrapper a:visited {
     color: #000000;
 }
