--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -4,7 +4,7 @@
 
 input {
     border: 1px solid #000!important;
-    border-radius: 0px!important;
+    border-radius: 0!important;
 }
 
 button {
@@ -32,7 +32,7 @@ button.close:hover {
 }
 
 .modal-content {
-    border-radius: 0px;
+    border-radius: 0;
     border: 2px solid #000;
     box-shadow: 5px 5px #000;
 }
