--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -7,24 +7,22 @@ input {
     border-radius: 0!important;
 }
 
-button {
-    border: none;
+button:not(.close) {
+    border: 2px solid #000;
     border-radius: 0!important;
-    background-color: #333C3F;
-    color: #FFF;
+    background-color: #FFF;
+    color: #000;
     padding: 0.25em 0.75em;
+    box-shadow: 2.5px 2.5px #000;
 }
 
-button.secondary {
+button.secondary{
     background-color: #6C757D;
 }
 
-button:hover {
-    background-color: #000;
-}
-
-button.secondary:hover {
-    background-color: #5C6369;
+button:not(.close):hover {
+    transform: translate(2.5px, 2.5px);
+    box-shadow: 0 0 #FFF;
 }
 
 button.close:hover {
