--- a/src/components/components.css
+++ b/src/components/components.css
@@ -25,12 +25,13 @@
 
 .deleteButton {
     float: right;
-    border: 2px solid #000!important;
+    border: 2px solid #FFF!important;
     box-shadow: none!important;
     padding: 0 7.5px!important;
 }
 
 .deleteButton:hover {
+    border: 2px solid #000 !important;
     transform: none!important;
     background-color: #F25341;
 }
@@ -70,4 +71,25 @@
 
 .newAdder:hover {
     background-color: #4de36f;
+}
+
+table {
+    border-spacing: 0;
+    border: 2px solid black;
+    box-shadow: 2.5px 2.5px #000;
+}
+
+tr:last-child td {
+    border-bottom: 0;
+}
+
+th, td {
+    margin: 0;
+    padding: 0.5rem 5rem 0.5rem 0.5rem;
+    border-bottom: 2px solid black;
+    border-right: 2px solid black;
+}
+
+th:last-child, td:last-child {
+    border-right: 0;
 }
