--- a/src/components/components.css
+++ b/src/components/components.css
@@ -64,19 +64,30 @@
     box-shadow: 2.5px 2.5px #000;
 }
 
-.groupBlock:hover, .courseBlock:hover, .newAdder:hover {
+.groupBlock:hover, .courseBlock:hover, .newAdder:hover, .newGradeAdder:hover {
     transform: translate(2.5px, 2.5px);
     box-shadow: 0 0 #FFF;
 }
 
-.newAdder:hover {
+.newAdder:hover, .newGradeAdder:hover {
     background-color: #4de36f;
+}
+
+.newGradeAdder {
+    margin-top: 0.5rem;
+    display: inline-block;
+    width: 100%;
+    padding: 0.5rem 5rem 0.5rem 0.5rem;
+    border: 2px solid #000;
+    border-radius: 0;
+    box-shadow: 2.5px 2.5px #000;
 }
 
 table {
     border-spacing: 0;
     border: 2px solid black;
     box-shadow: 2.5px 2.5px #000;
+    width: 100%;
 }
 
 tr:last-child td {
