--- a/src/components/components.css
+++ b/src/components/components.css
@@ -96,9 +96,18 @@ tr:last-child td {
 
 th, td {
     margin: 0;
-    padding: 0.5rem 5rem 0.5rem 0.5rem;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
     border-bottom: 2px solid black;
     border-right: 2px solid black;
+}
+
+td input {
+    border: none!important;
+    width: 100%;
+}
+
+td input:focus {
+    outline: none!important;
 }
 
 th:last-child, td:last-child {
