--- a/src/components/components.css
+++ b/src/components/components.css
@@ -91,7 +91,11 @@ table {
 }
 
 tr:last-child td {
-    border-bottom: 0;
+    /*border-bottom: 0;*/
+}
+
+td:last-child {
+    width: 33%;
 }
 
 th, td {
@@ -108,6 +112,7 @@ td input {
 
 td input:focus {
     outline: none!important;
+    background-color: #ACDFF8;
 }
 
 th:last-child, td:last-child {
