--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -2,7 +2,7 @@
     font-weight: 500!important;
 }
 
-input {
+input, select {
     border: 1px solid #000!important;
     border-radius: 0!important;
 }
